<resources>
    <string name="app_name">Baking App</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="previous">Previous</string>
    <string name="quantity">Quantity: </string>
    <string name="measure">Measure: </string>
    <string name="ingredient">Ingredient: </string>
    <string name="descrerror">No description available</string>
    <string name="ingredients">Ingredient</string>
    <string name="next">Next</string>
    <string name="nutella">Nutella</string>
    <string name="video_url_missing">Video URL missing</string>
    <string name="no_recipes_available">No recipes available</string>
    <string name="testing">Testing</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="steps">Steps</string>
    <string name="instructions">Instructions</string>

</resources>
